// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate v3 -> v4 migrates codebook 1`] = `
{
  "codebook": {
    "edge": {
      "edgeType": {
        "name": "bar_bazz",
        "variables": {
          "buzz": {
            "name": "fizz_pop",
          },
        },
      },
    },
    "ego": {
      "variables": {
        "foo": {
          "name": "foo_bar",
        },
      },
    },
    "node": {
      "allowedTypeName": {
        "name": "okay_-type:.name",
      },
      "disallowedType": {
        "name": "disallowed_type_name",
        "variables": {
          "invalidExampleVariable": {
            "name": "variable_with_disallowed_characters",
            "options": [
              {
                "label": "foo",
                "value": "f_o_o",
              },
              {
                "label": "foo2",
                "value": "f_o_o2",
              },
              {
                "label": "bar",
                "value": "b_a-r:.",
              },
              {
                "label": "bazz",
                "value": 5,
              },
            ],
          },
          "invalidExampleVariableDuplicate": {
            "name": "variable_with_disallowed_characters2",
          },
          "validExampleVariable": {
            "name": "variable_with-allowed:characters.",
          },
        },
      },
      "disallowedTypeDuplicate": {
        "name": "disallowed_type_name2",
      },
    },
  },
  "stages": [],
}
`;

exports[`migrate v3 -> v4 type names 1`] = `
{
  "allowedTypeName": {
    "name": "okay_-type:.name",
  },
  "disallowedType": {
    "name": "disallowed_type_name",
    "variables": {
      "invalidExampleVariable": {
        "name": "variable_with_disallowed_characters",
        "options": [
          {
            "label": "foo",
            "value": "f_o_o",
          },
          {
            "label": "foo2",
            "value": "f_o_o2",
          },
          {
            "label": "bar",
            "value": "b_a-r:.",
          },
          {
            "label": "bazz",
            "value": 5,
          },
        ],
      },
      "invalidExampleVariableDuplicate": {
        "name": "variable_with_disallowed_characters2",
      },
      "validExampleVariable": {
        "name": "variable_with-allowed:characters.",
      },
    },
  },
  "disallowedTypeDuplicate": {
    "name": "disallowed_type_name2",
  },
}
`;

exports[`migrate v3 -> v4 variable names 1`] = `
{
  "invalidExampleVariable": {
    "name": "variable_with_disallowed_characters",
    "options": [
      {
        "label": "foo",
        "value": "f_o_o",
      },
      {
        "label": "foo2",
        "value": "f_o_o2",
      },
      {
        "label": "bar",
        "value": "b_a-r:.",
      },
      {
        "label": "bazz",
        "value": 5,
      },
    ],
  },
  "invalidExampleVariableDuplicate": {
    "name": "variable_with_disallowed_characters2",
  },
  "validExampleVariable": {
    "name": "variable_with-allowed:characters.",
  },
}
`;

exports[`migrate v3 -> v4 option values 1`] = `
[
  {
    "label": "foo",
    "value": "f_o_o",
  },
  {
    "label": "foo2",
    "value": "f_o_o2",
  },
  {
    "label": "bar",
    "value": "b_a-r:.",
  },
  {
    "label": "bazz",
    "value": 5,
  },
]
`;

exports[`migrate v3 -> v4 migrates additional attributes 1`] = `
{
  "codebook": {},
  "stages": [
    {
      "prompts": [
        {
          "additionalAttributes": [
            {
              "value": true,
              "variable": "foobar",
            },
            {
              "value": false,
              "variable": "fizzpop",
            },
          ],
          "id": "someBoolean",
        },
        {
          "id": "noBoolean",
        },
      ],
    },
  ],
}
`;

exports[`migrate v3 -> v4 additional attributes values 1`] = `
[
  {
    "value": true,
    "variable": "foobar",
  },
  {
    "value": false,
    "variable": "fizzpop",
  },
]
`;

exports[`migrate v3 -> v4 additional attributes values 2`] = `
{
  "id": "noBoolean",
}
`;
